--- a/package.json
+++ b/package.json
@@ -2,5 +2,30 @@
   "name": "neat-components",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "test": "jest --coverage"
+  },
+  "devDependencies": {
+    "@types/jest": "^20.0.2",
+    "babel-jest": "^20.0.3",
+    "babel-preset-stage-2": "^6.24.1",
+    "cross-env": "^5.0.1",
+    "jest": "^20.0.4",
+    "regenerator-runtime": "^0.10.5",
+    "rollup": "^0.43.0"
+  },
+  "dependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "polished": "^1.2.1",
+    "react": "^15.6.1"
+  },
+  "standard": {
+    "globals": [
+      "expect",
+      "test"
+    ]
+  }
 }
