--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "neat-components",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "bundle.js",
   "license": "MIT",
   "scripts": {
+    "build": "rollup -c",
     "test": "jest --coverage"
   },
   "devDependencies": {
@@ -13,11 +14,14 @@
     "cross-env": "^5.0.1",
     "jest": "^20.0.4",
     "regenerator-runtime": "^0.10.5",
-    "rollup": "^0.43.0"
+    "rollup": "^0.43.0",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-node-resolve": "^3.0.0"
   },
   "dependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-react": "^6.24.1",
     "react": "^15.6.1"
   },
