--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
     "babel-preset-react": "^6.24.1",
     "react": "^15.6.1"
   },
+  "keywords":[
+    "neat",
+    "thoughtbot",
+    "styled",
+    "components",
+    "styled-components"
+  ],
   "standard": {
     "globals": [
       "expect",
