--- a/package.json
+++ b/package.json
@@ -9,22 +9,18 @@
   },
   "devDependencies": {
     "@types/jest": "^20.0.2",
+    "babel-cli": "^6.24.1",
     "babel-jest": "^20.0.3",
+    "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-stage-2": "^6.24.1",
-    "cross-env": "^5.0.1",
     "jest": "^20.0.4",
     "regenerator-runtime": "^0.10.5",
     "rollup": "^0.43.0",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-node-resolve": "^3.0.0"
   },
-  "dependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-es2015-rollup": "^3.0.0",
-    "babel-preset-react": "^6.24.1",
-    "react": "^15.6.1"
-  },
-  "keywords":[
+  "dependencies": {},
+  "keywords": [
     "neat",
     "thoughtbot",
     "styled",
