--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "main": "bundle.js",
   "license": "MIT",
   "scripts": {
-    "build": "rollup -c",
-    "test": "jest --coverage"
+    "build": "cross-env NODE_ENV=prod&& rollup -c",
+    "test": "cross-env NODE_ENV=test&& jest"
   },
   "devDependencies": {
     "@types/jest": "^20.0.2",
     "babel-cli": "^6.24.1",
     "babel-jest": "^20.0.3",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-stage-2": "^6.24.1",
+    "cross-env": "^5.0.1",
     "jest": "^20.0.4",
     "regenerator-runtime": "^0.10.5",
     "rollup": "^0.43.0",
