--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "babel-cli": "^6.24.1",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.0.1",
     "jest": "^20.0.4",
+    "react": "^15.6.1",
     "regenerator-runtime": "^0.10.5",
     "rollup": "^0.43.0",
     "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-watch": "^4.0.0"
+    "rollup-watch": "^4.0.0",
+    "styled-components": "^2.1.0"
   },
   "dependencies": {},
   "keywords": [
