Neat() will now merge default values and arguments

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "thoughtbot",
     "styled",
     "components",
-    "styled-components"
+    "styled-components",
+    "grid"
   ],
   "jest": {
     "roots": [
