--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "neat-components",
-  "version": "1.0.11",
+  "version": "1.0.12",
+  "description": "Combining Thoughtbot's Neat Grid system with Styled Components",
   "main": "bundle.js",
   "license": "MIT",
   "repository": "magicink/neat-components",
