test script issued the wrong command

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "cross-env NODE_ENV=prod rollup -c",
     "build:develop": "cross-env NODE_ENV=prod rollup -c -w",
     "lint": "standard \"./src/**.js\"",
-    "test": "yarn standard && cross-env NODE_ENV=test jest"
+    "test": "yarn lint && cross-env NODE_ENV=test jest"
   },
   "devDependencies": {
     "@types/jest": "^20.0.2",
