started adding flow

--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,8 @@
     "test": {
       "presets": [
         "es2015",
-        "stage-2"
+        "stage-2",
+        "flow"
       ]
     },
     "prod": {
