--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "build": "cross-env NODE_ENV=prod rollup -c",
     "build:develop": "cross-env NODE_ENV=prod rollup -c -w",
     "lint": "standard \"./src/**.js\"",
-    "test": "yarn lint && cross-env NODE_ENV=test jest"
+    "test": "yarn lint && cross-env NODE_ENV=test jest",
+    "test:watch": "cross-env NODE_ENV=test jest --watch"
   },
   "devDependencies": {
     "@types/jest": "^20.0.2",
     "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.0.1",
+    "eslint-plugin-flowtype": "^2.35.0",
+    "flow-bin": "^0.52.0",
     "jest": "^20.0.4",
     "react": "^15.6.1",
     "regenerator-runtime": "^0.10.5",
@@ -49,6 +54,10 @@
     ]
   },
   "standard": {
+    "parser": "babel-eslint",
+    "plugins": [
+      "flowtype"
+    ],
     "globals": [
       "describe",
       "expect",
