--- a/package.json
+++ b/package.json
@@ -1,44 +1,61 @@
 {
   "name": "neat-components",
-  "version": "1.0.20",
+  "version": "1.0.21",
   "description": "Combining Thoughtbot's Neat Grid system with Styled Components",
   "main": "bundle.js",
   "license": "MIT",
   "repository": "magicink/neat-components",
   "scripts": {
-    "build": "cross-env NODE_ENV=prod rollup -c",
-    "build:develop": "cross-env NODE_ENV=prod rollup -c -w",
+    "build": "cross-env NODE_ENV=production rollup --config rollup.config.js",
+    "build:demo": "cross-env NODE_ENV=test webpack --config ./demos/webpack.config.js --mode=development",
+    "start:demo": "cross-env NODE_ENV=test node ./demos/start.js",
     "lint": "standard --parser babel-eslint \"./src/**.js\"",
-    "test": "yarn lint && cross-env NODE_ENV=test jest",
+    "test": "cross-env NODE_ENV=test jest --coverage",
     "test:watch": "cross-env NODE_ENV=test jest --watch"
   },
   "devDependencies": {
-    "@types/jest": "^20.0.2",
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "core-decorators": "^0.20.0",
     "cross-env": "^5.0.1",
     "eslint-plugin-flowtype": "^2.35.0",
+    "express": "^4.16.3",
     "flow-bin": "^0.52.0",
-    "jest": "^20.0.4",
-    "react": "^15.6.1",
+    "history": "^4.7.2",
+    "jest": "^22.4.3",
+    "pug": "^2.0.3",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "regenerator-runtime": "^0.10.5",
-    "rollup": "^0.43.0",
-    "rollup-plugin-babel": "^2.7.1",
+    "rollup": "^0.57.1",
+    "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-flow": "^1.1.1",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-uglify": "^3.0.0",
     "rollup-watch": "^4.0.0",
     "standard": "^10.0.2",
-    "styled-components": "^2.1.0"
+    "styled-components": "^3.2.5",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
+    "winston": "^2.4.1"
   },
   "dependencies": {},
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0 || ^16.0.0",
-    "styled-components": "^2.1.0"
+    "styled-components": "^3.2.5"
   },
   "keywords": [
     "neat",
