--- a/package.json
+++ b/package.json
@@ -7,38 +7,31 @@
   "repository": "magicink/neat-components",
   "scripts": {
     "build": "cross-env NODE_ENV=production rollup --config rollup.config.js",
-    "build:demo": "cross-env NODE_ENV=test webpack --config ./demos/webpack.config.js --mode=development",
-    "start:demo": "cross-env NODE_ENV=test node ./demos/start.js",
     "lint": "standard --parser babel-eslint \"./src/**.js\"",
+    "storybook": "start-story -p 9001 -c .storybook",
     "test": "cross-env NODE_ENV=test jest --coverage",
     "test:watch": "cross-env NODE_ENV=test jest --watch"
   },
   "devDependencies": {
+    "@storybook/react": "^3.4.2",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.4",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
-    "core-decorators": "^0.20.0",
     "cross-env": "^5.0.1",
     "eslint-plugin-flowtype": "^2.35.0",
     "express": "^4.16.3",
     "flow-bin": "^0.52.0",
-    "history": "^4.7.2",
     "jest": "^22.4.3",
-    "pug": "^2.0.3",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
     "regenerator-runtime": "^0.10.5",
     "rollup": "^0.57.1",
     "rollup-plugin-babel": "^3.0.3",
@@ -48,10 +41,7 @@
     "rollup-plugin-uglify": "^3.0.0",
     "rollup-watch": "^4.0.0",
     "standard": "^10.0.2",
-    "styled-components": "^3.2.5",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
-    "winston": "^2.4.1"
+    "styled-components": "^3.2.5"
   },
   "dependencies": {},
   "peerDependencies": {
