--- a/package.json
+++ b/package.json
@@ -1,45 +1,52 @@
 {
   "name": "neat-components",
-  "version": "1.0.23",
+  "version": "1.0.24",
   "description": "Combining Thoughtbot's Neat Grid system with Styled Components",
   "main": "bundle.js",
   "license": "MIT",
   "repository": "magicink/neat-components",
   "scripts": {
-    "build": "cross-env NODE_ENV=production rollup --config rollup.config.js",
+    "build": "rollup --config rollup.config.js",
     "lint": "standard --parser babel-eslint \"./src/**.js\"",
-    "storybook": "start-story -p 9001 -c .storybook",
-    "test": "cross-env NODE_ENV=test jest --coverage",
-    "test:watch": "cross-env NODE_ENV=test jest --watch"
+    "storybook": "start-storybook -c .storybook -p 9001",
+    "storybook:build": "build-storybook -c .storybook -o .out",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
-    "@storybook/react": "^3.4.2",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.26.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-decorators": "^7.2.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "@babel/runtime": "^7.2.0",
+    "@storybook/addon-storysource": "^4.1.4",
+    "@storybook/react": "^4.1.4",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^7.2.3",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "cross-env": "^5.0.1",
+    "babel-loader": "^8.0.5",
     "eslint-plugin-flowtype": "^2.35.0",
     "express": "^4.16.3",
     "flow-bin": "^0.52.0",
-    "jest": "^22.4.3",
+    "jest": "^23.6.0",
+    "jest-environment-jsdom": "^23.4.0",
+    "jest-environment-jsdom-global": "^1.1.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "regenerator-runtime": "^0.10.5",
-    "rollup": "^0.57.1",
-    "rollup-plugin-babel": "^3.0.3",
-    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup": "^1.0.2",
+    "rollup-plugin-babel": "^4.2.0",
+    "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-flow": "^1.1.1",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-uglify": "^3.0.0",
-    "rollup-watch": "^4.0.0",
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-terser": "^4.0.1",
+    "rollup-plugin-uglify": "^6.0.0",
+    "rollup-watch": "^4.3.1",
     "standard": "^10.0.2",
     "styled-components": "^3.2.5"
   },
@@ -56,6 +63,7 @@
     "grid"
   ],
   "jest": {
+    "testEnvironment": "jest-environment-jsdom-global",
     "roots": [
       "<rootDir>/src/"
     ]
