--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "license": "MIT",
   "repository": "magicink/neat-components",
   "scripts": {
-    "build": "rollup --config rollup.config.js",
+    "build": "rrollup --config rollup.config.js",
     "lint": "standard --parser babel-eslint \"./src/**.js\"",
     "storybook": "start-storybook -c .storybook -p 9001",
-    "storybook:build": "build-storybook -c .storybook -o docs",
+    "storybook:build": "rimraf ./docs && build-storybook -c .storybook -o docs",
     "test": "jest --coverage",
     "test:watch": "jest --watch"
   },
@@ -39,6 +39,7 @@
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "regenerator-runtime": "^0.10.5",
+    "rimraf": "^2.6.3",
     "rollup": "^1.0.2",
     "rollup-plugin-babel": "^4.2.0",
     "rollup-plugin-commonjs": "^9.2.0",
@@ -48,7 +49,7 @@
     "rollup-plugin-uglify": "^6.0.0",
     "rollup-watch": "^4.3.1",
     "standard": "^10.0.2",
-    "styled-components": "^3.2.5"
+    "styled-components": "^3.4.10"
   },
   "dependencies": {},
   "peerDependencies": {
