--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,19 @@
 {
   "presets": [
-    ["@babel/preset-env", {
-      "modules": false,
-      "forceAllTransforms": true
-    }],
+    [
+      "@babel/preset-env",
+      {
+        "modules": false,
+        "forceAllTransforms": true
+      }
+    ],
     "@babel/preset-flow",
     "@babel/preset-react"
   ],
   "plugins": [
     "@babel/plugin-syntax-dynamic-import",
     "@babel/plugin-transform-modules-commonjs",
-    "@babel/plugin-transform-runtime"
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-proposal-export-default-from"
   ]
 }
