--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neat-components",
-  "version": "1.0.26",
+  "version": "1.0.27",
   "description": "Combining Thoughtbot's Neat Grid system with Styled Components",
   "main": "bundle.js",
   "license": "MIT",
@@ -8,8 +8,10 @@
   "scripts": {
     "build": "rollup --config rollup.config.js",
     "lint": "standard --parser babel-eslint \"./src/**.js\"",
+    "patch": "npm version patch --no-git-tag-version",
+    "prepare": "npm run build",
     "storybook": "start-storybook -c .storybook -p 9001",
-    "storybook:build": "rimraf ./docs && build-storybook -c .storybook -o docs",
+    "storybook:build": "npx rimraf ./docs && build-storybook -c .storybook -o docs",
     "test": "jest --coverage",
     "test:watch": "jest --watch"
   },
@@ -17,6 +19,7 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-decorators": "^7.2.3",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-modules-commonjs": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
@@ -25,35 +28,33 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.2.0",
-    "@storybook/addon-storysource": "^4.1.4",
-    "@storybook/react": "^4.1.4",
+    "@storybook/addon-storysource": "^5.0.6",
+    "@storybook/cli": "^5.0.6",
+    "@storybook/react": "^5.0.6",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^7.2.3",
+    "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.5",
     "eslint-plugin-flowtype": "^2.35.0",
     "express": "^4.16.3",
     "flow-bin": "^0.52.0",
-    "jest": "^23.6.0",
-    "jest-environment-jsdom": "^23.4.0",
-    "jest-environment-jsdom-global": "^1.1.0",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "jest": "^24.7.1",
+    "jest-environment-jsdom": "^24.7.1",
+    "jest-environment-jsdom-global": "^1.2.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "regenerator-runtime": "^0.10.5",
-    "rimraf": "^2.6.3",
-    "rollup": "^1.0.2",
-    "rollup-plugin-babel": "^4.2.0",
-    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup": "^1.9.3",
+    "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-flow": "^1.1.1",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-terser": "^4.0.1",
-    "rollup-plugin-uglify": "^6.0.0",
-    "rollup-watch": "^4.3.1",
-    "standard": "^10.0.2",
-    "styled-components": "^3.4.10"
+    "rollup-plugin-node-resolve": "^4.2.2",
+    "rollup-plugin-terser": "^4.0.4",
+    "standard": "^12.0.1",
+    "styled-components": "^4.2.0"
   },
   "dependencies": {},
   "peerDependencies": {
-    "styled-components": "^3.2.5"
+    "styled-components": "^4.2.0"
   },
   "keywords": [
     "neat",
@@ -70,9 +71,14 @@
     ]
   },
   "standard": {
+    "parser": "babel-eslint",
     "plugins": [
       "flowtype"
     ],
+    "rules": {
+      "flowtype/define-flow-type": 1,
+      "flowtype/use-flow-type": 1
+    },
     "globals": [
       "describe",
       "expect",
