--- a/package.json
+++ b/package.json
@@ -1,74 +1,78 @@
 {
+  "author": {
+    "email": "brandon@brandontom.com",
+    "name": "Brandon Tom"
+  },
   "name": "neat-components",
-  "version": "1.0.27",
+  "version": "1.0.28",
   "description": "Combining Thoughtbot's Neat Grid system with Styled Components",
-  "main": "bundle.js",
-  "license": "MIT",
+  "keywords": [
+    "components",
+    "grid",
+    "neat",
+    "styled",
+    "styled-components",
+    "thoughtbot"
+  ],
   "repository": "magicink/neat-components",
+  "license": "MIT",
+  "main": "bundle.js",
   "scripts": {
-    "build": "rollup --config rollup.config.js",
+    "build": "rollup --config rollup.config.js && npm run storybook:build",
     "lint": "standard --parser babel-eslint \"./src/**.js\"",
     "patch": "npm version patch --no-git-tag-version",
-    "prepare": "npm run build",
+    "prepare": "npm run storybook:build && npm run build",
     "storybook": "start-storybook -c .storybook -p 9001",
     "storybook:build": "npx rimraf ./docs && build-storybook -c .storybook -o docs",
     "test": "jest --coverage",
     "test:watch": "jest --watch"
   },
+  "jest": {
+    "roots": [
+      "<rootDir>/src/"
+    ],
+    "testEnvironment": "jest-environment-jsdom-global"
+  },
+  "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-decorators": "^7.2.3",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "@babel/runtime": "^7.2.0",
-    "@storybook/addon-storysource": "^5.0.6",
-    "@storybook/cli": "^5.0.6",
-    "@storybook/react": "^5.0.6",
+    "@babel/register": "^7.4.4",
+    "@babel/runtime": "^7.4.4",
+    "@storybook/addon-storysource": "^5.0.11",
+    "@storybook/cli": "^5.0.11",
+    "@storybook/react": "^5.0.11",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "^23.4.2",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
-    "eslint-plugin-flowtype": "^2.35.0",
-    "express": "^4.16.3",
-    "flow-bin": "^0.52.0",
+    "eslint-plugin-flowtype": "^3.7.0",
+    "flow-bin": "^0.98.0",
     "jest": "^24.7.1",
     "jest-environment-jsdom": "^24.7.1",
     "jest-environment-jsdom-global": "^1.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "regenerator-runtime": "^0.10.5",
-    "rollup": "^1.9.3",
+    "regenerator-runtime": "^0.13.2",
+    "rollup": "^1.11.2",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-flow": "^1.1.1",
-    "rollup-plugin-node-resolve": "^4.2.2",
+    "rollup-plugin-node-resolve": "^4.2.3",
     "rollup-plugin-terser": "^4.0.4",
     "standard": "^12.0.1",
+    "storybook-readme": "^5.0.3",
     "styled-components": "^4.2.0"
   },
-  "dependencies": {},
   "peerDependencies": {
     "styled-components": "^4.2.0"
-  },
-  "keywords": [
-    "neat",
-    "thoughtbot",
-    "styled",
-    "components",
-    "styled-components",
-    "grid"
-  ],
-  "jest": {
-    "testEnvironment": "jest-environment-jsdom-global",
-    "roots": [
-      "<rootDir>/src/"
-    ]
   },
   "standard": {
     "parser": "babel-eslint",
