--- a/.babelrc
+++ b/.babelrc
@@ -14,6 +14,14 @@
     "@babel/plugin-syntax-dynamic-import",
     "@babel/plugin-transform-modules-commonjs",
     "@babel/plugin-transform-runtime",
-    "@babel/plugin-proposal-export-default-from"
+    "@babel/plugin-proposal-export-default-from",
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-transform-arrow-functions",
+    "@babel/plugin-transform-spread",
+    "@babel/plugin-transform-destructuring",
+    "@babel/plugin-transform-parameters",
+    "@babel/plugin-transform-block-scoping",
+    "@babel/plugin-transform-computed-properties",
+    "@babel/plugin-transform-template-literals"
   ]
 }
