--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
-  "author": {
-    "email": "brandon@brandontom.com",
-    "name": "Brandon Tom"
-  },
   "name": "neat-components",
-  "version": "1.0.28",
+  "version": "1.0.29",
   "description": "Combining Thoughtbot's Neat Grid system with Styled Components",
   "keywords": [
     "components",
@@ -16,6 +12,10 @@
   ],
   "repository": "magicink/neat-components",
   "license": "MIT",
+  "author": {
+    "name": "Brandon Tom",
+    "email": "brandon@brandontom.com"
+  },
   "main": "bundle.js",
   "scripts": {
     "build": "rollup --config rollup.config.js && npm run storybook:build",
@@ -33,16 +33,25 @@
     ],
     "testEnvironment": "jest-environment-jsdom-global"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@babel/preset-env": "^7.4.4"
+  },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
     "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-arrow-functions": "^7.2.0",
+    "@babel/plugin-transform-block-scoping": "^7.4.4",
+    "@babel/plugin-transform-computed-properties": "^7.2.0",
+    "@babel/plugin-transform-destructuring": "^7.4.4",
     "@babel/plugin-transform-modules-commonjs": "^7.4.4",
+    "@babel/plugin-transform-parameters": "^7.4.4",
     "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/plugin-transform-spread": "^7.2.2",
+    "@babel/plugin-transform-template-literals": "^7.4.4",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.4",
@@ -51,27 +60,27 @@
     "@storybook/cli": "^5.0.11",
     "@storybook/react": "^5.0.11",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.7.1",
-    "babel-loader": "^8.0.5",
-    "eslint-plugin-flowtype": "^3.7.0",
-    "flow-bin": "^0.98.0",
-    "jest": "^24.7.1",
-    "jest-environment-jsdom": "^24.7.1",
+    "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.6",
+    "eslint-plugin-flowtype": "^3.9.1",
+    "flow-bin": "^0.100.0",
+    "jest": "^24.8.0",
+    "jest-environment-jsdom": "^24.8.0",
     "jest-environment-jsdom-global": "^1.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "regenerator-runtime": "^0.13.2",
-    "rollup": "^1.11.2",
+    "rollup": "^1.13.1",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-flow": "^1.1.1",
-    "rollup-plugin-node-resolve": "^4.2.3",
-    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-node-resolve": "^5.0.1",
+    "rollup-plugin-terser": "^5.0.0",
     "standard": "^12.0.1",
     "storybook-readme": "^5.0.3",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.1"
   },
   "peerDependencies": {
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.1"
   },
   "standard": {
     "parser": "babel-eslint",
