--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
     ],
     "testEnvironment": "jest-environment-jsdom-global"
   },
-  "dependencies": {
-    "@babel/preset-env": "^7.4.4"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
@@ -55,21 +53,23 @@
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/plugin-transform-spread": "^7.2.2",
     "@babel/plugin-transform-template-literals": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.4",
     "@babel/runtime": "^7.4.4",
-    "@storybook/addon-storysource": "^5.0.11",
-    "@storybook/cli": "^5.1.1",
-    "@storybook/react": "^5.0.11",
+    "@storybook/addon-storysource": "^5.1.8",
+    "@storybook/cli": "^5.1.8",
+    "@storybook/react": "^5.1.8",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
-    "eslint-plugin-flowtype": "^3.9.1",
+    "eslint-plugin-flowtype": "^3.10.3",
     "flow-bin": "^0.100.0",
     "jest": "^24.8.0",
     "jest-environment-jsdom": "^24.8.0",
     "jest-environment-jsdom-global": "^1.2.0",
+    "marked": "^0.6.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "regenerator-runtime": "^0.13.2",
@@ -80,7 +80,7 @@
     "rollup-plugin-terser": "^5.0.0",
     "standard": "^12.0.1",
     "storybook-readme": "^5.0.3",
-    "styled-components": "^4.2.1"
+    "styled-components": "^4.3.1"
   },
   "peerDependencies": {
     "styled-components": "^4.2.1"
