--- a/.babelrc
+++ b/.babelrc
@@ -22,6 +22,8 @@
     "@babel/plugin-transform-parameters",
     "@babel/plugin-transform-block-scoping",
     "@babel/plugin-transform-computed-properties",
-    "@babel/plugin-transform-template-literals"
+    "@babel/plugin-transform-template-literals",
+    "@babel/plugin-proposal-nullish-coalescing-operator",
+    "@babel/plugin-proposal-optional-chaining"
   ]
 }
