--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
   "main": "bundle.js",
   "scripts": {
     "build": "rollup --config rollup.config.js",
+    "clean": "npx rimraf bundle.js && npx rimraf ./docs",
     "lint": "standard --parser babel-eslint \"./src/**.js\"",
     "patch": "npm version patch --no-git-tag-version",
     "prepare": "npx rimraf ./docs && npm run build",
-    "storybook": "start-storybook -c .storybook -p 9001",
-    "storybook:build": "npx rimraf ./docs && build-storybook -c .storybook -o docs",
+    "storybook": "npm run clean && npm run build && start-storybook -c .storybook -p 9001",
+    "storybook:build": "npm run clean && npm run build && build-storybook -c .storybook -o docs",
     "test": "jest --coverage",
     "test:watch": "jest --watch"
   },
@@ -46,7 +47,9 @@
     "@babel/core": "^7.10.5",
     "@babel/plugin-proposal-decorators": "^7.10.5",
     "@babel/plugin-proposal-export-default-from": "^7.10.4",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-arrow-functions": "^7.10.4",
     "@babel/plugin-transform-block-scoping": "^7.10.5",
@@ -62,14 +65,18 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/register": "^7.10.5",
     "@babel/runtime": "^7.10.5",
+    "@rollup/plugin-babel": "^5.1.0",
     "@storybook/addon-storysource": "^5.3.19",
     "@storybook/cli": "^5.3.19",
     "@storybook/react": "^5.3.19",
+    "@testing-library/react": "^10.4.7",
+    "@testing-library/react-hooks": "^3.4.1",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "eslint-plugin-flowtype": "^3.10.3",
     "flow-bin": "^0.100.0",
+    "husky": "^4.2.5",
     "jest": "^26.1.0",
     "jest-environment-jsdom": "^26.1.0",
     "jest-environment-jsdom-global": "^2.0.4",
@@ -77,11 +84,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "regenerator-runtime": "^0.13.2",
-    "rollup": "^1.13.1",
-    "rollup-plugin-babel": "^4.3.2",
+    "rollup": "^2.23.0",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-flow": "^1.1.1",
-    "rollup-plugin-node-resolve": "^5.0.1",
-    "rollup-plugin-terser": "^5.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^6.1.0",
     "standard": "^12.0.1",
     "styled-components": "^4.3.1"
   },
@@ -101,7 +108,13 @@
       "describe",
       "expect",
       "it",
-      "test"
+      "test",
+      "$Values"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run clean && npm run storybook:build && npm test"
+    }
   }
 }
